Update Java SDK to draft-12